src/styles/layout.scss
@import "variables";

main {
  min-height: 100vh;
  padding: 12rem 6rem;
  z-index: 1;
}

div.full-height {
  min-height: 100vh;
}

footer {
  position: relative;
  font-size: 1.1rem;
  font-weight: 800;
  color: #fff;
  text-shadow: 0 0 1px red;

  a {
    color: #fff;

    &:hover {
      color: #ddd;
    }

    &:after {
      color: #fff;
    }
  }

  i {
    color: #aaa;
  }

  span {
    float: right;
  }

  ul {
    bottom: 60%;
    list-style-type: none;
  }

  .footer-bg {
    position: absolute;
    bottom: 0;
    z-index: 0;
    height: 300px;
    width: 100%;
    overflow: hidden;
  }

  .footer-content {
    position: relative;
    z-index: 1;
    background-color: #0000;
    padding: 0 15% 40px;
  }

  .footer-attributions {
    font-size: 0.7rem;

    a {
      position: absolute;
      bottom: 0;
      right: 0;
    }
  }
}

//tablet
@media screen and (max-width: $tablet-width) {
  main {
    padding: 6rem 1rem 12rem 1rem;
  }

  footer {
    .footer-attributions {
      padding-top: 1rem;

      a {
        position: relative;
      }
    }
  }
}

// phone
@media screen and (max-width: $phone-width) {
  main {
    padding: 10rem 1rem 2rem 1rem;
  }

  footer {
    margin-top: 30%;

    .footer-content {
      padding: 0 1rem 3rem;
    }

    i {
      float: left;
      clear: left;
    }

    span {
      float: left;
      clear: left;
      margin-bottom: 0.4rem;
    }
  }
}

